--- a/PodoDemo/Views/Shared/Layout.cshtml
+++ b/PodoDemo/Views/Shared/Layout.cshtml
@@ -23,6 +23,7 @@
     @*커스텀 파일*@
     <link href="~/css/Layout.css" rel="stylesheet" />
     <script src="~/js/Common.js"></script>
+    <script src="~/js/jqwidget-custom.js"></script>
 
     <script type="text/javascript">
         $(document).ready(function () {
