--- a/PodoDemo/wwwroot/css/Layout_BootstrapCustom.css
+++ b/PodoDemo/wwwroot/css/Layout_BootstrapCustom.css
@@ -2,6 +2,7 @@
 .custom-container {
     padding-left: 0px;
     padding-right: 0px;
+    background-color: #f9f9f9;
 }
 
 
@@ -47,7 +48,7 @@
     background-color: #474747;
     color: white;
     font-size: 30px;
-    width: 100%;
+    /*width: 100%;*/
     padding-left: 10px;
 }
 
