--- a/PodoDemo/Views/Shared/Popup_Layout.cshtml
+++ b/PodoDemo/Views/Shared/Popup_Layout.cshtml
@@ -22,6 +22,8 @@
     @*커스텀 파일*@
     <link href="~/css/Layout.css" rel="stylesheet" />
     <script src="~/js/Common.js"></script>
+    <link href="~/css/Layout_BootstrapCustom.css" rel="stylesheet" />
+
 </head>
 <body>
     <div>
