--- a/PodoDemo/Views/Shared/Components/MenuList/Default.cshtml
+++ b/PodoDemo/Views/Shared/Components/MenuList/Default.cshtml
@@ -4,12 +4,12 @@
 
 @{
     List<MenuDisplay> SubMenuDisplay = ViewBag.SubMenuList;
+    List<MenuDisplay> MenuList = Model.ToList<MenuDisplay>();
 }
 
 <link href="~/css/Menu.css" rel="stylesheet" />
-<div class="menuList">
+@*<div class="menuList">
     <img src="~/images/Menu/logo.png" class="menuLogo" width="150" />
-    @*<div class="menuLogo">로고 150 * 60 px</div>*@
     <div class="menuBlock">
         @{
             List<MenuDisplay> MenuList = Model.ToList<MenuDisplay>();
@@ -43,13 +43,77 @@
         <span class="userName">@ViewBag.UserName</span> 님
         <button type="button" class="logoutButton">로그아웃</button>
     </div>
-</div>
+</div>*@
 
 <nav class="navbar navbar-default">
     <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" ></button>
-            <a class="navbar-brand" href="#">포도CRM</a>
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">PodoCRM</a>
         </div>
-    </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                @*<li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+                <li><a href="#">Link</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                    <ul class="dropdown-menu" role="menu">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">Separated link</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">One more separated link</a></li>
+                    </ul>
+                </li>*@
+                @for (int parentIndex = 0; parentIndex < MenuList.Count; parentIndex++)
+                {
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">@MenuList[parentIndex].ParentMenuName <span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
+                            @for (int subIndex = 0; subIndex < SubMenuDisplay.Count; subIndex++)
+                            {
+                                @if (MenuList[parentIndex].ParentMenuId.Equals(SubMenuDisplay[subIndex].ParentMenuId))
+                                {
+                                    <li>
+                                        <a href="@SubMenuDisplay[subIndex].MenuUrl">
+                                            @SubMenuDisplay[subIndex].SubMenuName
+                                        </a>
+                                    </li>
+                                }
+                            }
+                        </ul>
+                    </li>
+                }
+            </ul>
+            <form class="navbar-form navbar-left" role="search">
+                @*<div class="form-group">
+                    <input type="text" class="form-control" placeholder="Search">
+                </div>*@
+                <button type="button" class="btn btn-default">로그아웃</button>
+            </form>
+            @*<ul class="nav navbar-nav navbar-right">
+                <li><a href="#">Link</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                    <ul class="dropdown-menu" role="menu">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">Separated link</a></li>
+                    </ul>
+                </li>
+            </ul>*@
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
 </nav>
