--- a/PodoDemo/wwwroot/css/LoginPage.css
+++ b/PodoDemo/wwwroot/css/LoginPage.css
@@ -16,8 +16,9 @@ html, body {
 }
 
 .loginForm {
-    height: 100%;
-    padding: 0;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .loginLogo {
@@ -31,64 +32,9 @@ html, body {
 
 .loginButton {
     background-color: #525252;
-    border: none;
-    border-radius: 3px;
     color: white;
-    font-size: 20px;
-    width: 250px;
-    height: 50px;
-    cursor: pointer;
 }
 
     .loginButton:hover {
+        color: #2588EA;
     }
-
-.logindiv {
-    height: 100%;
-    background-color: #EBEBEB;
-}
-
-.logintab {
-    background-color: white;
-    width: 600px;
-    /*height: 400px;*/
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin: -200px 0 0 -300px;
-    padding-bottom: 20px;
-    padding-top: 20px;
-}
-
-    .logintab .userInput {
-        /*float:right;*/
-        text-align: center;
-        margin-top: 10px;
-    }
-
-    .logintab .mainImage {
-        float: left;
-        margin-left: 30px;
-    }
-
-.bottom {
-    background-color: #525252;
-    font-size: 13px;
-    color: white;
-    height: 100px;
-    width: 100%;
-    bottom: 0;
-    position: fixed;
-    text-align: center;
-}
-
-.inputbox1 {
-    height: 30px;
-    width: 250px;
-}
-
-.inputbox2 {
-    height: 30px;
-    width: 250px;
-    margin-top: 10px;
-}
