--- a/PodoDemo/Views/Home/Index.cshtml
+++ b/PodoDemo/Views/Home/Index.cshtml
@@ -54,29 +54,29 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-sm-12">
                 <img src="~/images/Login/login_logo.png" class="img-responsive center-block" alt="로고" />
             </div>
         </div>
 
         <form id="loginForm" class="form-horizontal loginForm">
             <div class="form-group">
-                <label class="col-md-2 control-label">조직</label>
-                <div class="col-md-10">
+                <label class="col-sm-2 control-label">조직</label>
+                <div class="col-sm-10">
                     <input type="text" id="org" name="org" class="form-control" placeholder="조직" />
                 </div>
             </div>
 
             <div class="form-group">
-                <label class="col-md-2 control-label">이메일</label>
-                <div class="col-md-10">
+                <label class="col-sm-2 control-label">이메일</label>
+                <div class="col-sm-10">
                     <input type="text" id="userID" name="useriD" class="form-control" placeholder="아이디" onkeydown="OnKeyDown(this.id)" />
                 </div>
             </div>
 
             <div class="form-group">
-                <label class="col-md-2 control-label">비밀번호</label>
-                <div class="col-md-10">
+                <label class="col-sm-2 control-label">비밀번호</label>
+                <div class="col-sm-10">
                     <input type="password" id="userPW" name="userPW" class="form-control" placeholder="비밀번호" onkeydown="OnKeyDown(this.id)" />
                 </div>
             </div>
@@ -89,19 +89,20 @@
         </form>
 
         @*<div class="row">
-            <div class="col-md-3">
+            <div class="col-sm-3">
                 상호명 : 트루인포 | 사업자등록번호 : 119-86-17769 |
             </div>
-            <div class="col-md-3">                
+            <div class="col-sm-3">                
                 대표자 : 신수원 | 전화번호 : 070-8231-4590 | 팩스번호 : 02-6008-3199
             </div>
-            <div class="col-md-3">
+            <div class="col-sm-3">
                 주소 : 서울특별시 금천구 서부샛길 606, 디폴리스 B동 1309호
             </div>
-            <div class="col-md-3">
+            <div class="col-sm-3">
                 Copyrights(c) @DateTime.Now.Year, trueinfo.All rights reserved.
             </div>
         </div>*@
     </div>
+
 </body>
 </html>
