부트스트랩 컴파일 /

--- a/PodoDemo/Views/Shared/Components/MenuList/Default.cshtml
+++ b/PodoDemo/Views/Shared/Components/MenuList/Default.cshtml
@@ -9,7 +9,7 @@
 
 <link href="~/css/Menu.css" rel="stylesheet" />
 
-<nav class="navbar navbar-custom">
+<nav class="navbar navbar-default">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
