--- a/PodoDemo/wwwroot/bootstrap332/less/dropdowns.less
+++ b/PodoDemo/wwwroot/bootstrap332/less/dropdowns.less
@@ -1,7 +1,7 @@
-//
+﻿//
 // Dropdown menus
 // --------------------------------------------------
-
+@import "variables";
 
 // Dropdown arrow/caret
 .caret {
