--- a/PodoDemo/Views/Accounts/Index.cshtml
+++ b/PodoDemo/Views/Accounts/Index.cshtml
@@ -142,7 +142,10 @@
 
         <div class="row">
             <div class="col-md-offset-10 col-md-2">
-                <button type="button" class="btn custom-btn custom-btn-save">검색</button>
+                <button type="button" class="btn custom-btn custom-btn-save">
+                    <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                    검색
+                </button>
             </div>
         </div>
 
@@ -166,42 +169,5 @@
             </div>
         </div>
     </div>
-
-
-
-    @*<div class="ViewTitle">
-            <span>거래처 목록</span>
-        </div>
-        <div class="SearchCondition">
-            <table>
-                <tr>
-                    <td class="LabelTD"></td>
-                    <td class="InputTD"></td>
-                    <td class="LabelTD"></td>
-                    <td class="InputTD"></td>
-                    <td class="LabelTD"></td>
-                    <td class="InputTD"></td>
-                    <td class="LabelTD">
-                        <span class="SearchLabel">업종</span>
-                    </td>
-                    <td class="InputTD">
-                        <input type="text" class="SearchInput" />
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="8">
-                        <button type="button" class="SearchButton">검색</button>
-                    </td>
-                </tr>
-            </table>
-        </div>
-        <div class="ViewContent">
-            <div id="accountList"></div>
-        </div>
-
-        <div class="ControlButtonArea">
-            <a href="/Accounts/Create">생성</a>
-        </div>*@
-
 </div>
 
