--- a/PodoDemo/wwwroot/bootstrap332/less/navs.less
+++ b/PodoDemo/wwwroot/bootstrap332/less/navs.less
@@ -1,7 +1,7 @@
-//
+﻿//
 // Navs
 // --------------------------------------------------
-
+@import "variables";
 
 // Base class
 // --------------------------------------------------
