--- a/PodoDemo/wwwroot/bootstrap332/less/variables.less
+++ b/PodoDemo/wwwroot/bootstrap332/less/variables.less
@@ -224,7 +224,8 @@
 //## Dropdown menu container and contents.
 
 //** Background for the dropdown menu.
-@dropdown-bg:                    #fff;
+/*@dropdown-bg:                    #fff;*/
+@dropdown-bg:                    #2588EA;
 //** Dropdown menu `border-color`.
 @dropdown-border:                rgba(0,0,0,.15);
 //** Dropdown menu `border-color` **for IE8**.
@@ -233,11 +234,14 @@
 @dropdown-divider-bg:            #e5e5e5;
 
 //** Dropdown link text color.
-@dropdown-link-color:            @gray-dark;
+/*@dropdown-link-color:            @gray-dark;*/
+@dropdown-link-color:            #FFFFFF;
 //** Hover color for dropdown links.
-@dropdown-link-hover-color:      darken(@gray-dark, 5%);
+/*@dropdown-link-hover-color:      darken(@gray-dark, 5%);*/
+@dropdown-link-hover-color:      #FFFFFF;
 //** Hover background for dropdown links.
-@dropdown-link-hover-bg:         #f5f5f5;
+/*@dropdown-link-hover-bg:         #f5f5f5;*/
+@dropdown-link-hover-bg:         #474747;
 
 //** Active dropdown menu item text color.
 @dropdown-link-active-color:     @component-active-color;
@@ -362,7 +366,7 @@
 
 // Navbar links
 @navbar-default-link-color:                #FFFFFF;
-@navbar-default-link-hover-color:          #333;
+@navbar-default-link-hover-color:          #FF8C00;
 @navbar-default-link-hover-bg:             transparent;
 @navbar-default-link-active-color:         #FFFFFF;
 @navbar-default-link-active-bg:            darken(@navbar-default-bg, 6.5%);
@@ -375,15 +379,15 @@
 @navbar-default-brand-hover-bg:            transparent;
 
 // Navbar toggle
-@navbar-default-toggle-hover-bg:           #ddd;
-@navbar-default-toggle-icon-bar-bg:        #888;
+@navbar-default-toggle-hover-bg:           #2588EA;
+@navbar-default-toggle-icon-bar-bg:        #FFFFFF;
 @navbar-default-toggle-border-color:       #ddd;
 
 
 // Inverted navbar
 // Reset inverted navbar basics
 @navbar-inverse-color:                      lighten(@gray-light, 15%);
-@navbar-inverse-bg:                         #222;
+@navbar-inverse-bg:                         #2588EA;
 @navbar-inverse-border:                     darken(@navbar-inverse-bg, 10%);
 
 // Inverted navbar links
@@ -401,9 +405,9 @@
 @navbar-inverse-brand-hover-bg:             transparent;
 
 // Inverted navbar toggle
-@navbar-inverse-toggle-hover-bg:            #333;
-@navbar-inverse-toggle-icon-bar-bg:         #fff;
-@navbar-inverse-toggle-border-color:        #333;
+@navbar-inverse-toggle-hover-bg:            #FFFFFF;
+@navbar-inverse-toggle-icon-bar-bg:         #ff8c00;
+@navbar-inverse-toggle-border-color:        #ff8c00;
 
 
 //== Navs
