--- a/PodoDemo/Views/Accounts/Index.cshtml
+++ b/PodoDemo/Views/Accounts/Index.cshtml
@@ -100,7 +100,7 @@
 </script>
 
 <div class="View">
-    <div class="container-fluid custom-container">
+    <div class="container custom-container">
         <div class="row">
             <div class="col-md-12 custom-header">
                 <p class="text-left">거래처 목록</p>
@@ -116,7 +116,7 @@
             </div>
         </div>
 
-        <form class="form-horizontal custom-form">
+        <form class="form-horizontal">
             <div class="form-group">
                 <label class="col-md-1 control-label">회사명</label>
                 <div class="col-md-2">
