--- a/PodoDemo/wwwroot/bootstrap332/less/grid.less
+++ b/PodoDemo/wwwroot/bootstrap332/less/grid.less
@@ -1,7 +1,9 @@
-//
+﻿//
 // Grid system
 // --------------------------------------------------
-
+@import "variables";
+@import "mixins/grid";
+@import "mixins/grid-framework";
 
 // Container widths
 //
