--- a/PodoDemo/wwwroot/bootstrap332/less/mixins/buttons.less
+++ b/PodoDemo/wwwroot/bootstrap332/less/mixins/buttons.less
@@ -1,4 +1,4 @@
-// Button variants
+﻿// Button variants
 //
 // Easily pump out default styles, as well as :hover, :focus, :active,
 // and disabled options for all buttons
@@ -16,7 +16,7 @@
   .open > .dropdown-toggle& {
     color: @color;
     background-color: darken(@background, 10%);
-        border-color: darken(@border, 12%);
+        border-color: darken(@border, 10%);
   }
   &:active,
   &.active,
