--- a/PodoDemo/wwwroot/bootstrap332/less/variables.less
+++ b/PodoDemo/wwwroot/bootstrap332/less/variables.less
@@ -144,9 +144,10 @@
 
 @btn-font-weight:                normal;
 
-@btn-default-color:              #333;
-@btn-default-bg:                 #fff;
-@btn-default-border:             #ccc;
+/*@btn-default-color:              #333;*/
+@btn-default-color:              #FFFFFF;
+@btn-default-bg:                 #2588EA;
+@btn-default-border:             #2588EA;
 
 @btn-primary-color:              #fff;
 @btn-primary-bg:                 @brand-primary;
