생성 모양 수정

--- a/PodoDemo/Views/Shared/Components/MenuList/Default.cshtml
+++ b/PodoDemo/Views/Shared/Components/MenuList/Default.cshtml
@@ -18,7 +18,7 @@
 </script>
 
 <nav class="navbar navbar-default">
-    <div class="container-fluid">
+    <div class="container-nav">
 
         @*
             CSS 수정 시 variables.less / dropdowns.less / navbar.less 수정
@@ -61,7 +61,7 @@
                 }
             </ul>
             <form class="navbar-form navbar-left" role="search">
-                <button type="button" id="logoutBtn" class="btn custom-btn custom-btn-menubtn">로그아웃</button>
+                <button type="button" id="logoutBtn" class="btn btn-default">로그아웃</button>
             </form>
 
         </div><!-- /.navbar-collapse -->
