--- a/PodoDemo/Views/Accounts/Index.cshtml
+++ b/PodoDemo/Views/Accounts/Index.cshtml
@@ -100,23 +100,22 @@
 </script>
 
 <div class="View">
-    <div class="container custom-container">
+    <div class="container">
         <div class="row">
             <div class="col-md-12 custom-header">
                 <p class="text-left">거래처 목록</p>
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-md-12">
-                <div class="custom-title">
-                    <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-                    <span>검색</span>                    
+        <form class="form-horizontal">
+            <div class="form-group">
+                <div class="col-md-12">
+                    <div class="custom-title">
+                        <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                        <span>검색</span>
+                    </div>                    
                 </div>
             </div>
-        </div>
-
-        <form class="form-horizontal">
             <div class="form-group">
                 <label class="col-md-1 control-label">회사명</label>
                 <div class="col-md-2">
@@ -142,7 +141,7 @@
 
         <div class="row">
             <div class="col-md-offset-10 col-md-2">
-                <button type="button" class="btn custom-btn custom-btn-save">
+                <button type="button" class="btn btn-default">
                     <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
                     검색
                 </button>
@@ -154,7 +153,7 @@
                 <div class="custom-title">
                     <hr />
                     <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
-                    <span>상세 내용</span>                    
+                    <span>상세 내용</span>
                 </div>
                 <div id="accountList"></div>
             </div>
@@ -162,7 +161,7 @@
 
         <div class="row">
             <div class="col-md-offset-10 col-md-2">
-                <a href="/Accounts/Create" class="btn custom-btn custom-btn-save">
+                <a href="/Accounts/Create" class="btn btn-default">
                     <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                     거래처 생성
                 </a>
