--- a/PodoDemo/Views/Home/Index.cshtml
+++ b/PodoDemo/Views/Home/Index.cshtml
@@ -16,8 +16,8 @@
     <link href="~/css/LoginPage.css" rel="stylesheet" />
 
     @*부트 스트랩*@
-    <script src="~/js/bootstrap332/js/bootstrap.js"></script>
-    <link href="~/js/bootstrap332/css/bootstrap.css" rel="stylesheet" />
+    <script src="~/bootstrap332/dist/js/bootstrap.js"></script>
+    <link href="~/bootstrap332/dist/css/bootstrap.css" rel="stylesheet" />
     <link href="~/css/Layout_BootstrapCustom.css" rel="stylesheet" />
 
     <script type="text/javascript">
@@ -83,7 +83,7 @@
 
             <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
-                    <button type="submit" id="LoginButton" class="btn custom-btn loginButton">로그인</button>
+                    <button type="submit" id="LoginButton" class="btn btn-default loginButton">로그인</button>
                 </div>
             </div>
         </form>
