--- a/PodoDemo/wwwroot/bootstrap332/less/forms.less
+++ b/PodoDemo/wwwroot/bootstrap332/less/forms.less
@@ -528,7 +528,8 @@ input[type="checkbox"] {
   // labels on narrow viewports stack the same as a default form example.
   @media (min-width: @screen-sm-min) {
     .control-label {
-      text-align: right;
+      /*text-align: right;*/
+      text-align: center;
       margin-bottom: 0;
       padding-top: (@padding-base-vertical + 1); // Default padding plus a border
     }
