--- a/PodoDemo/wwwroot/bootstrap332/less/grid.less
+++ b/PodoDemo/wwwroot/bootstrap332/less/grid.less
@@ -10,14 +10,34 @@
 // Set the container width, and override it for fixed navbars in media queries.
 
 .container {
+  background-color: #FFFFFF;
   .container-fixed();
 
   @media (min-width: @screen-sm-min) {
     width: @container-sm;
   }
+
   @media (min-width: @screen-md-min) {
     width: @container-md;
   }
+
+  @media (min-width: @screen-lg-min) {
+    width: @container-lg;
+  }
+}
+
+.container-nav {
+  background-color: #2588EA;
+  .container-fixed();
+
+  @media (min-width: @screen-sm-min) {
+    width: @container-sm;
+  }
+
+  @media (min-width: @screen-md-min) {
+    width: @container-md;
+  }
+
   @media (min-width: @screen-lg-min) {
     width: @container-lg;
   }
@@ -39,6 +59,7 @@
 // Rows contain and clear the floats of your columns.
 
 .row {
+  margin-bottom:10px;
   .make-row();
 }
 
