--- a/PodoDemo/wwwroot/bootstrap332/less/mixins/grid.less
+++ b/PodoDemo/wwwroot/bootstrap332/less/mixins/grid.less
@@ -7,8 +7,10 @@
 .container-fixed(@gutter: @grid-gutter-width) {
   margin-right: auto;
   margin-left: auto;
-  padding-left:  (@gutter / 2);
-  padding-right: (@gutter / 2);
+  /*padding-left: (@gutter / 2);
+  padding-right: (@gutter / 2);*/
+  padding-left: 0px;
+  padding-right: 0px;
   &:extend(.clearfix all);
 }
 
