--- a/PodoDemo/wwwroot/bootstrap332/less/navbar.less
+++ b/PodoDemo/wwwroot/bootstrap332/less/navbar.less
@@ -13,13 +13,14 @@
 .navbar {
   position: relative;
   min-height: @navbar-height; // Ensure a navbar always shows (e.g., without a .navbar-brand in collapsed mode)
-  margin-bottom: @navbar-margin-bottom;
+  /*margin-bottom: @navbar-margin-bottom;*/
+  margin-bottom: 0;
   border: 1px solid transparent;
   // Prevent floats from breaking the navbar
   &:extend(.clearfix all);
 
   @media (min-width: @grid-float-breakpoint) {
-    border-radius: @navbar-border-radius;    
+    border-radius: @navbar-border-radius;
   }
 }
 
